# codewalk

./: CONTRIBUTING.md  Cargo.toml  README.md  clippy.json
examples/: basic.rs  ignore_patterns.rs  toml_config.rs
src/: adversarial_tests.rs  detect.rs  error.rs  lib.rs  public_api_tests.rs  walker.rs
